added Particle class and Vector3 was improved

--- a/Bunch/Bunch.vcxproj.filters
+++ b/Bunch/Bunch.vcxproj.filters
@@ -9,6 +9,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\particle.h">
+      <Filter>include</Filter>
+    </ClInclude>
     <ClInclude Include="include\precision.h">
       <Filter>include</Filter>
     </ClInclude>
@@ -17,6 +20,9 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\particle.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
     <ClCompile Include="src\vector3.cpp">
       <Filter>src</Filter>
     </ClCompile>
