--- a/Bunch/Bunch.vcxproj
+++ b/Bunch/Bunch.vcxproj
@@ -90,10 +90,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\particle.h" />
     <ClInclude Include="include\precision.h" />
     <ClInclude Include="include\vector3.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\particle.cpp" />
     <ClCompile Include="src\vector3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
