--- a/Bunch/Bunch.vcxproj.filters
+++ b/Bunch/Bunch.vcxproj.filters
@@ -15,6 +15,9 @@
     <ClInclude Include="include\particle_collision.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="include\particle_collision_detection.h">
+      <Filter>include</Filter>
+    </ClInclude>
     <ClInclude Include="include\precision.h">
       <Filter>include</Filter>
     </ClInclude>
@@ -27,6 +30,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\particle_collision.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\particle_collision_detection.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\vector3.cpp">
