--- a/Bunch/Bunch.vcxproj.filters
+++ b/Bunch/Bunch.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="include\particle_collision_detection.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="include\particle_world.h">
+      <Filter>include</Filter>
+    </ClInclude>
     <ClInclude Include="include\precision.h">
       <Filter>include</Filter>
     </ClInclude>
@@ -33,6 +36,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\particle_collision_detection.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\particle_world.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\vector3.cpp">
