--- a/Bunch/Bunch.vcxproj
+++ b/Bunch/Bunch.vcxproj
@@ -93,6 +93,7 @@
     <ClInclude Include="include\particle.h" />
     <ClInclude Include="include\particle_collision.h" />
     <ClInclude Include="include\particle_collision_detection.h" />
+    <ClInclude Include="include\particle_force.h" />
     <ClInclude Include="include\particle_world.h" />
     <ClInclude Include="include\precision.h" />
     <ClInclude Include="include\vector3.h" />
@@ -101,6 +102,7 @@
     <ClCompile Include="src\particle.cpp" />
     <ClCompile Include="src\particle_collision.cpp" />
     <ClCompile Include="src\particle_collision_detection.cpp" />
+    <ClCompile Include="src\particle_force.cpp" />
     <ClCompile Include="src\particle_world.cpp" />
     <ClCompile Include="src\vector3.cpp" />
   </ItemGroup>
